--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-parallax": "^1.8.0",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "wowjs": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
