--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.4.2",
     "react-parallax": "^1.8.0",
     "react-scripts": "1.1.5",
+    "smoothscroll": "^0.4.0",
     "wowjs": "^1.1.3"
   },
   "scripts": {
