--- a/package.json
+++ b/package.json
@@ -2,13 +2,26 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "main": "server/index.js",
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.5",
+    "sendgrid": "^5.2.3",
     "smooth-scroll": "^14.2.1",
     "smoothscroll": "^0.4.0",
+    "sweetalert": "^2.1.0",
     "wowjs": "^1.1.3"
+  },
+  "proxy": {
+    "/api": {
+      "target": "http://localhost:3040"
+    }
   },
   "scripts": {
     "start": "react-scripts start",
